--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 // トップページ
-@import "moduls/header";
-@import "moduls/main";
-@import "moduls/banner";
-@import "moduls/footer";
+@import "reset";
+@import "modules/header";
+@import "modules/main";
+@import "modules/banner";
+@import "modules/footer";
 // 
