--- a/app/views/devise/registrations/jyusyu.html.haml
+++ b/app/views/devise/registrations/jyusyu.html.haml
@@ -12,9 +12,9 @@
           .field__box-one
             .field
               .field-label
-                = f.label :フリガナ（名字）
+                = f.label :ふりがな（名字）
               .field-input
-                = f.text_field :name, autofocus: true, autocomplete: "given-name", autocomplete: "off",placeholder:"フリガナ＊必須",size:15,required:true,pattern:'[ァ-ヴ][ァ-ヴー・]*',title:"全角カナで入力して下さい。"
+                = f.text_field :name, autofocus: true, autocomplete: "given-name", autocomplete: "off",placeholder:"ふりがな＊必須",size:15,required:true,pattern:'[ぁ-ん][ぁ-んー・]*',title:"全角かなで入力して下さい。"
             .field
               .field-label
                 = f.label :名前（名字）
@@ -23,9 +23,9 @@
           .field__box-two
             .field
               .field-label
-                = f.label :フリガナ（名前）全角
+                = f.label :ふりがな（名前）全角
               .field-input
-                = f.text_field :name,autocomplete: "family-name", autocomplete: "off",placeholder:"フリガナ＊必須",size:15,required:true,pattern:'[ァ-ヴ][ァ-ヴー・]*',title:"全角カナで入力して下さい。"
+                = f.text_field :name,autocomplete: "family-name", autocomplete: "off",placeholder:"ふりがな＊必須",size:15,required:true,pattern:'[ぁ-ん][ぁ-んー・]*',title:"全角かなで入力して下さい。"
             .field
               .field-label
                 = f.label :名前（名前）全角
@@ -35,21 +35,21 @@
           .field-label
             = f.label :郵便番号
           .field-input
-            = f.number_field :name,autocomplete: "off",placeholder:"郵便番号＊必須",size:10,required:true,pattern:'^[0-9]{3}-[0-9]{4}$',title:"数字で入力して下さい。"
+            = f.number_field :name,autocomplete: "off",placeholder:"郵便番号＊必須",size:10,required:true,pattern:'^[0-9]{3}[0-9]{4}$',title:"数字で入力して下さい。"
         .field
           .field-label
             = f.label :都道府県
           .field-input
-            = f.text_field :name,autocomplete: "off",placeholder:"都、道、府、県",size:14
+            = f.text_field :name,autocomplete: "off",placeholder:"都、道、府、県",size:14,required:true,pattern:'[^\x01-\x7E]',title:"全角で入力して下さい。"
         .field
           .field-label
             = f.label :市区町村
           .field-input
-            = f.text_field :name,autocomplete: "off",placeholder:"市、区、町、村",size:14
+            = f.text_field :name,autocomplete: "off",placeholder:"市、区、町、村",size:14,required:true,pattern:'[^\x01-\x7E]',title:"全角で入力して下さい。"
         .field
           .field-label
             = f.label :以下番地、建物名
           .field-input
-            = f.text_field :name,autocomplete: "off",placeholder:"〇〇ビル〇〇号室",size:14
+            = f.text_field :name,autocomplete: "off",placeholder:"〇〇ビル〇〇号室",size:14,required:true,pattern:'[^\x01-\x7E]',title:"全角で入力して下さい。"
         .actions
           = f.submit "登録", class: 'btn'
