--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,12 +1,15 @@
 .new-top
-  .new-top__photo
-  .new-top__photo
-  .new-top__photo
-  .new-top__photo
-
+   %ul.new-top__photo
+    %li.new-top__photo--show
+    %li.new-top__photo--show
+    %li.new-top__photo--show
+    %li.new-top__photo--show
+    
 .new-main
   .new-main__name
     .new-main__name--title
+      %p商品説明
+      %span必須
     .new-main__name--detail
 
   .new-main__content
