--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,10 +1,22 @@
 .new-top
    %ul.new-top__photo
     %li.new-top__photo--show
+      %label{class: "new-top__photo--show__image"}
+        = icon('fas', 'image')
+        %input{type: "file"}    
     %li.new-top__photo--show
+      %label{class: "new-top__photo--show__image"}
+        = icon('fas', 'image')
+        %input{type: "file"}    
     %li.new-top__photo--show
+      %label{class: "new-top__photo--show__image"}
+        = icon('fas', 'image')
+        %input{type: "file"}    
     %li.new-top__photo--show
-    
+      %label{class: "new-top__photo--show__image"}
+        = icon('fas', 'image')
+        %input{type: "file"}    
+
 .new-main
   .new-main__name
     .new-main__name--title
