--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -3,7 +3,7 @@
   &__box1 {
     width: 100%;
     height: 550px;
-    background-image: url(bg-mainVisual-pict_pc.png);
+    background-image: image-url("bg-mainVisual-pict_pc.png");
     background-size: cover;
     color: white;
     text-shadow: 0 0 5px rgba(0,0,0,0.4);
