--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -77,7 +77,7 @@
           配送元の地域
           %span.important ※必須
         .new-main__name--detail
-          = f.text_field :region, { class:'new-main__name--detail', placeholder: '指定なし' }
+          = f.text_field :region, { class:'new-main__name--detail', placeholder: '東京都' }
 
       .new-main__submit
         = f.submit '出品する', class: 'new-main__submit--btn'
