--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -324,7 +324,7 @@
             }
             &__right {
               display: flex;
-              align-items: center;
+              // align-items: center;
             }
           }
         }
