--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,77 +1,77 @@
-* {
-  box-sizing: border-box;
-}
-
-.show {
-  width: 100vw;
-  height: 100vh;
-  &__header {
+.header {
+  min-height: 82px;
+  padding: 0 60px;
+  &__inner {
+    padding: 15px 0;
+    max-width: 1040px;
+    margin: 0 auto;
     width: 100%;
-    border-top: 1px solid #eee;
-    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
-    &__text {
-      margin: 0 auto;
-    }
-  }
-  &__main {
-    &__box {
-      &__contents {
-        &__top {
-          &__images {
-            &__title {
-            }
-            &__image {
-
-            }
-          }
-          &__prices {
-            &__price {
-
-            }
-            &__tax-text {
-
-            }
-          }
-          &__comment {
-
-          }
-          &__table {
-
-          }
-          &__btns {
-            &__left {
-
-            }
-            &__right {
-
-            }
-          }
-        }
-        &__bottom {
+    &__header {
+      padding-bottom: 10px;
+      display: flex;
+      align-items: center;
+      height: 50px;
+      display: flex;
+      &__icon {
+        margin-right: 30px;
+        width: 195px;
+        height: 50px;
+      }
+      &__sarch {
+        padding-bottom: 8px;
+        display: flex;
+        width: 100%;
+        &__input {
+          width: 100%;
+          height: 36px;
           &__text {
-
+            padding-left: 5px;
+            height: 32px;
+            width: 100%;
           }
-          &__btns {
-            &__submit {
-
-            }
-            &__buy {
-
+        }
+        &__submit {
+          margin-left: 9px;
+          width: 36px;
+          height: 36px;
+          &__btn {
+            width: 100%;
+            height: 100%;
+            background-color: #3ccace;
+            &__img {
+              width: 100%;
+              height: 70%;
             }
           }
         }
-        &__links {
-          &__top {
-
-          }
-          &__bottom {
-            &__back-psge {
-
-            }
-            &__next-page {
-
-            }
-          }
+      }
+    }
+    &__nav {
+      font-size: 14px;
+      display: flex;
+      &__left {
+        .a {
+          color: black;
+          text-decoration: none;
+        }
+        display: flex;
+        &__first {
+        }
+        &__second {
+          margin-left: 50px;
+        }
+      }
+      &__right {
+        .a {
+          color: black;
+          text-decoration: none;
+        }
+        margin-left: auto;
+        display: flex;
+        &__first {
+          margin-right: 16px;
+        }
+        &__second {
         }
       }
     }
