--- a/app/views/top_pages/index.html.haml
+++ b/app/views/top_pages/index.html.haml
@@ -1,4 +1,5 @@
-= render "header"
-= render "main"
-= render "banner"
-= render "footer"
+.wrapper
+  = render "header"
+  = render "main"
+  = render "banner"
+  = render "footer"
