--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,3 +1,8 @@
+a {
+  text-decoration: none;
+}
+
+
 .footer {
   width: 100%;
   background-color: rgb(39, 37, 37);
@@ -32,18 +37,33 @@
     }
   }
 }
-.btn {
-  border-radius: 4%;
-  font-size: 18px;
-  color: white;
-  height: 120px;
-  width: 120px;
-  background-color: #3CCACE;
+
+
+.newForm_btn{
+  position: absolute;
   position: fixed;
-  bottom: 32px;
-  right: 32px;
-  padding: 10px 20px 15px;
-  &__img {
+  z-index: 1;
+  bottom: 20px;
+  right: 20px;
   background-color: #3CCACE;
+  height: 130px;
+  width: 130px;
+  border-radius: 10px;
+  &__content{
+    &--text{
+      text-align: center;
+      color: white;
+      font-size: 18px;
+      padding: 20px 0 0 0;
+      text-decoration: none;
+    }
+    &--icon{
+      height: 54px
+      ;width: 54px;
+      text-align: center;
+      margin: auto;
+      display: block;
+    }
   }
 }
+
