ユーザー情報登録scss追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,4 +8,6 @@
 @import "modules/banner";
 @import "modules/footer";
 //
-@import "modules/items"
+@import "modules/items";
+@import "modules/new";
+@import "modules/jyusyu"
