--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,6 @@
     .account-page__inner--main
       %h1 会員登録済みの方はこちらからログイン
       = render "devise/shared/links"
-      %br
       %h2 ユーザー情報登録
     .account-page__inner--sabu
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
@@ -65,4 +64,4 @@
             = f.password_field :password_confirmation, autocomplete: "new-password",placeholder:"もう一度入力してください＊必須",size:30,required:true,minlength:'7'
         .actions
           = f.submit "NextPage", class: 'touroku__btn'
-
+  .footer
