--- a/app/assets/stylesheets/modules/_new.scss
+++ b/app/assets/stylesheets/modules/_new.scss
@@ -23,15 +23,40 @@
       display: inline-flex;
       &-two{
         margin-left: 10px;
-      }
-      
-    }
+        }
       }
     }
+  }
 
-
-}
 
 // sessionsのnew.html.hamlのsassを追記
 
+  .sessions{
+    width: 100%;
+    height: 100vh;
+    &__box{
+      width: 100%;
+      height:100% ;
+      padding: 0 100px;
+      background-color: rgb(247, 247, 247);
+      font-size: 20px;
+      text-align: center;
+    }
+  }
 
+
+// passwordのnew.html.hamlのsassを追記
+
+  .password{
+    width: 100%;
+    height: 100vh;
+    &__box{
+      width: 100%;
+      height:100% ;
+      padding: 0 100px;
+      background-color: rgb(247, 247, 247);
+      font-size: 20px;
+      text-align: center;
+    }
+  }
+}
