Edit_top-tages/banner

--- a/app/views/top_pages/_banner.html.haml
+++ b/app/views/top_pages/_banner.html.haml
@@ -5,6 +5,6 @@
       %p.comment 今すぐ無料ダウンロード！
     .banner__box__btn
       = link_to "#" do
-        = image_tag 'apple.png', alt: '', height: '100%', width: '100%', class: 'banner__box__btn__app'
+        = image_tag 'apple.png', alt: 'img', height: '100%', width: '100%', class: 'banner__box__btn__app'
       = link_to "#" do
-        = image_tag 'google.png', alt: '', height: '100%', width: '100%', class: 'banner__box__btn__google'
+        = image_tag 'google.png', alt: 'img', height: '100%', width: '100%', class: 'banner__box__btn__google'
