--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -2,51 +2,48 @@
   min-height: 82px;
   padding: 0 60px;
   &__inner {
-    padding: 15px 0;
+    padding: 30px 0 0;
     max-width: 1040px;
     margin: 0 auto;
     width: 100%;
-    &__header {
-      padding-bottom: 10px;
+    .main {
       display: flex;
       align-items: center;
-      height: 50px;
-      display: flex;
+      width: 100%;
       &__icon {
+        padding-bottom: 10px;
         margin-right: 30px;
-        width: 195px;
-        height: 50px;
+        &--img {
+          height: 40px;
+          width: 140px;
+        }
       }
       &__sarch {
         padding-bottom: 8px;
+        width: 80%;
         display: flex;
-        width: 100%;
         &__input {
           width: 100%;
-          height: 36px;
-          &__text {
+          &--text {
             padding-left: 5px;
-            height: 32px;
+            height: 36px;
             width: 100%;
           }
         }
         &__submit {
-          margin-left: 9px;
           width: 36px;
           height: 36px;
-          &__btn {
+          background-color: #3ccace;
+          &--btn {
             width: 100%;
-            height: 100%;
+            height: 65%;
             background-color: #3ccace;
-            &__img {
-              width: 100%;
-              height: 70%;
-            }
           }
         }
       }
     }
-    &__nav {
+    .nav {
+      margin-bottom: 10px;
       font-size: 14px;
       display: flex;
       &__left {
@@ -55,9 +52,9 @@
           text-decoration: none;
         }
         display: flex;
-        &__first {
+        &--first {
         }
-        &__second {
+        &--second {
           margin-left: 50px;
         }
       }
@@ -68,10 +65,10 @@
         }
         margin-left: auto;
         display: flex;
-        &__first {
+        &--first {
           margin-right: 16px;
         }
-        &__second {
+        &--second {
         }
       }
     }
