--- a/app/assets/stylesheets/modules/_banner.scss
+++ b/app/assets/stylesheets/modules/_banner.scss
@@ -1,16 +1,16 @@
 .banner {
-  width: 100vw;
-  height: 200px;
+  width: 100%;
+  // height: 200px;
   padding: 100px 0;
-  background-color: gray;
+  // background-color: gray;
   background-image: image-url("bg-appBanner-pict.png");
-
   background-size: cover;
   &__box {
     width: 100%;
     height: 100%;
-    text-align: center;
+
     &__text {
+      text-align: center;
       color: white;
       .title {
         text-shadow: 0 0 5px rgba(0,0,0,0.4);
@@ -23,16 +23,23 @@
       }
     }
     &__btn {
-      width: 30%;
+      width: 100%;
       height: 60px;
       display: flex;
-      margin: 25px auto 0;
+      justify-content: center;
+      margin: 20px auto 0;
       &__app {
-        width: 200px;
+        width: 180px;
         margin-right: 20px;
       }
+      &__app:hover{
+        opacity: 0.5;
+      }
       &__google {
-        width: 200px;
+        width: 180px;
+      }
+      &__google:hover{
+        opacity: 0.5;
       }
     }
   }
