--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -31,8 +31,14 @@
           width: 200px;
           margin-right: 20px;
         }
+        &__app:hover{
+          opacity: 0.5;
+        }
         &__google {
           width: 200px;
+        }
+        &__google:hover{
+          opacity: 0.5;
         }
       }
     }
@@ -73,8 +79,6 @@
           width: 33%;
           .image {
             width: 100%;
-            height: 70%;
-            background-color: gray;
             position: relative;
             .number {
               width: 60px;
@@ -135,16 +139,21 @@
           width: 200px;
           margin-right: 20px;
         }
+        &__app:hover{
+          opacity: 0.5;
+        }
         &__google {
           width: 200px;
+        }
+        &__google:hover{
+          opacity: 0.5;
         }
       }
     }
   }
   &__box4 {
     width: 100%;
-    height: 730px;
-    padding: 40px 0;
+    padding: 60px 100px;
     background-color: white;
     &__contents {
       max-width: 1000px;
@@ -175,8 +184,7 @@
           padding: 0 25px;
           width: 33%;
           .image {
-            width: 100%;
-            height: 70%;
+            width: 70%;
             margin: 0 auto;
           }
           .text {
@@ -192,7 +200,7 @@
       }
     }
   }
-  .main__box6 {
+  .main__box5 {
     padding: 70px 0;
     background-color: #f8f8f8;
     width: 100%;
@@ -207,7 +215,8 @@
         text-align: center;
         font-size: 28px;
         margin: 0 auto;
-        width: 60%;
+        min-width: 350px;
+        width: 100%;
         height: 35%;
         }
         &__text {
@@ -216,7 +225,8 @@
         color: #3CCACE;
         text-align: center;
         margin: 1px auto;
-        width: 70%;
+        min-width: 350px;
+        width: 100%;
         height: 40%;
         }
       }
@@ -224,6 +234,7 @@
         display: flex;
         justify-content: space-around;
         margin: 0 auto 0;
+        min-width: 400px;
         width: 70%;
         height: 65%;
         .first {
@@ -259,10 +270,14 @@
             }
           }
         }
+        .first:hover{
+          opacity: 0.6;
+        }
       }
     }
   }
-  .main__box5 {
+  .main__box6 {
+    padding-bottom: 60px;
     background-color: #f8f8f8;
     width: 100%;
     .inner {
@@ -276,7 +291,8 @@
         text-align: center;
         font-size: 28px;
         margin: 0 auto;
-        width: 60%;
+        min-width: 350px;
+        width: 100%;
         height: 35%;
         }
         &__text {
@@ -285,7 +301,8 @@
         color: #3CCACE;
         text-align: center;
         margin: 1px auto;
-        width: 70%;
+        min-width: 350px;
+        width: 100%;
         height: 40%;
         }
       }
@@ -293,6 +310,7 @@
         display: flex;
         justify-content: space-around;
         margin: 0 auto 0;
+        min-width: 400px;
         width: 70%;
         height: 65%;
         .first {
@@ -327,6 +345,9 @@
               align-items: center;
             }
           }
+        }
+        .first:hover{
+          opacity: 0.6;
         }
       }
     }
