--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,7 @@
 //
 @import "modules/items";
 @import "modules/new";
-@import "modules/jyusyu"
+@import "modules/jyusyu";
+@import "modules/error";
+
+
