単体テスト成功

--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -112,7 +112,7 @@
     color: white;
     text-shadow: 0 0 5px rgba(0,0,0,0.4);
     align-items: center;
-    background-image: url(bg-topMiddleDl-pict.png);
+    background-image: image-url("bg-mainVisual-pict_pc.png");
     background-size: cover;
     background-position: bottom;
     &__content {
