--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -53,12 +53,15 @@
         }
         display: flex;
         &--first {
+          list-style: none;
         }
         &--second {
+          list-style: none;
           margin-left: 50px;
         }
       }
       &__right {
+        list-style: none;
         .a {
           color: black;
           text-decoration: none;
@@ -73,4 +76,7 @@
       }
     }
   }
+}
+.ul_Nav {
+  list-style: none;
 }
