--- a/app/views/signup/step1.html.haml
+++ b/app/views/signup/step1.html.haml
@@ -3,11 +3,10 @@
   .account-page__inner
     .account-page__inner--main
       %h1 会員登録済みの方はこちらからログイン
-      = render "devise/shared/links"
+      = link_to "ログイン", user_session
       %h2 ユーザー情報登録
     .account-page__inner--sabu
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = devise_error_messages!
+      = form_for @user, url: step2_signup_index_path, method: :get do |f|
         .field
           .field-label
             = f.label :'ニックネーム(50文字以内)'
@@ -43,9 +42,6 @@
             = f.text_field :birthday,autocomplete: "given-name",placeholder:"生年月日＊必須",size:15,pattern:"^[0-9]+$",title:"半角数字で入力して下さい。",required:true
         .field
           .field-label
-          -#   = f.label :電話番号（ハイフン不要）
-          -# .field-input
-          -#   = f.text_field :phone_number,placeholder:"電話番号",size:15,pattern:'\d',title:"半角数字で入力して下さい。"
         .field
           .field-label
             = f.label :メールアドレス
