--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -13,7 +13,7 @@
     .nav
       %ul.nav__right.ul_Nav
       - if user_signed_in?
-        %li.nav__right--first
+        %li.nav__right--first.ul_Nav
           = link_to  user_registration_path, class: 'a', method: :delete do
             ログアウト
         %li.nav__right--second.ul_Nav
