--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,10 +7,11 @@
 @import "modules/main";
 @import "modules/banner";
 @import "modules/footer";
-//
+
 @import "modules/items";
 @import "modules/new";
 @import "modules/jyusyu";
 @import "modules/error";
+@import "modules/show";
 
 
