--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,25 +1,40 @@
 * {
   box-sizing: border-box;
-.header{
+.headers{
   width: 100%;
   height: 100px;
+  margin: auto;
+  max-width:800px;
 }
-.contents{
+.conten{
+  max-width:800px;
   width:100% ;
   height: calc(100vh - 100px - 200px);
-  padding: 0 200px;
+  margin: 0 auto;
+  background-color: white;
   &__main{
     width: 100%;
     height: 50%;
-    background-color: rgb(247, 247, 247);
+    background-color: lightgray;
     padding: 0 100px;
   
     &--box{
+      display: flex;
+      text-align: center;
+      margin: 0 auto;
+    }
+    &--name{
+      font-size: 20px;
+      font-weight: 800;
+      padding-top: 30px;
+      text-align: right;
     }
     &--page{
+      width: 100%;
       font-size: 30px;
       font-weight: 800;
       padding-top: 20px;
+      text-align: left;
     }
     }
   &__sabu{
@@ -50,8 +65,4 @@
     }
   }
 }
-.footer{
-  width: 100%;
-  height: 200px;
-  }
 }
