--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,4 +1,5 @@
 .show
+  = render "header"
   .header
     %ul.lists
       %li.list
@@ -110,3 +111,5 @@
           .main__box__contents__links__bottom
             = link_to "#",class:'link' do
               メンズをもっとみる
+  = render "banner"
+  = render "footer"            
