--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -54,7 +54,6 @@ a {
               margin-bottom: 15px;
             }
             &__image {
-              height: 450px;
               .lists-main {
                 width: 100%;
                 height: 100%;
@@ -65,21 +64,7 @@ a {
                     object-fit: cover;
                   }
                 }
-                .lists-sub {
-                  width: 100%;
-                  height: 25%;
-                  margin-top: 10px;
-                  display: flex;
-                  justify-content: center;
-                  .list-sub {
-                    width: 20%;
-                    margin: 0 5px;
-                    .image {
-                      object-fit: cover;
-                      
-                    }
-                  }
-                }
+
               }
             }
           }
@@ -204,4 +189,21 @@ a {
       }
     }
   }
+}
+
+.image {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+}
+
+.lists-sub {
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.list-sub {
+  width: 20%;
 }
