--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,8 @@
 
 @import "modules/items";
 @import "modules/new";
-@import "modules/jyusyu";
 @import "modules/error";
 @import "modules/show";
 @import "index";
+@import "signup/step2";
+@import "signup/step1";
