--- a/app/views/items/_main.html.haml
+++ b/app/views/items/_main.html.haml
@@ -135,3 +135,16 @@
                   （税込み）
               .info__right
                 ★ 4
+.newForm_btn
+  - if user_signed_in?
+    =link_to new_item_path do
+      .newForm_btn__content
+        .newForm_btn__content--text
+          出品する
+        = image_tag "icon_camera.png", class:"newForm_btn__content--icon"
+  - else  
+    =link_to new_user_session_path do
+      .newForm_btn__content
+        .newForm_btn__content--text
+          出品する
+        = image_tag "icon_camera.png", class:"newForm_btn__content--icon"
