--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,5 +1,3 @@
-* {
-  box-sizing: border-box;
 .headers{
   width: 100%;
   height: 100px;
@@ -9,13 +7,12 @@
 .conten{
   max-width:800px;
   width:100% ;
-  height: calc(100vh - 100px - 200px);
   margin: 0 auto;
   background-color: white;
   &__main{
     width: 100%;
-    height: 50%;
-    background-color: lightgray;
+    background-color: mediumturquoise;
+    color: white;
     padding: 0 100px;
   
     &--box{
@@ -37,20 +34,24 @@
       text-align: left;
     }
     }
-  &__sabu{
+  &__sabu {
     width: 100%;
     height:50% ;
-    &--box{
+    &__box {
       width: 100%;
       height:100% ;
-      display: flex;}
-      &--cade{
-        width:50% ;
+      &__cade {
+        width:100%;
+        max-width: 400px;
         height: 100%;
-        text-align: center;
         font-size: 30px;
-        padding-top: 20px;
-      
+        text-align: center;
+        margin-top: 10px;
+        border: 1px solid mediumturquoise;
+        &__title {
+        }
+        &__btn {
+        }
       }
       &--out{
         width: 50%;
@@ -59,10 +60,6 @@
         text-align: right;
         padding-top: 20px;
       }
-    a{
-      text-decoration: none;
-      font-size: 20px;
     }
   }
-}
 }
