--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -179,6 +179,8 @@ a {
               font-size: 20px;
               width: 40%;
               cursor: pointer;
+              text-align: center;
+              line-height: 50px;
             }
           }
         }
