--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,37 +1,38 @@
-.header
-  千葉さん達と共通
-.main
-  .main__cade
-    .main__cade--date
-      クレジットカード 登録 変更
-      .main__cade--text
-        = form_for "#"do |f|
-          .field
-            .field-label
-              = f.label :名前
-            .field-input
-              = f.text_field :name, autofocus: true, autocomplete: "off",placeholder:"名前＊必須",size:15,required:true,pattern:'[^\x01-\x7E]',title:"全角で入力して下さい。"
-          .field
-            .field-label
-              = f.label :カード番号
-            .field-input
-              = f.text_field :name,autocomplete: "off",placeholder:"＊隙間を空けず入力",size:25,required:true,title:"半角数字で入力して下さい。",pattern:'\d{1,4}'
-          .field
-            .field-label
-              = f.label :カードの裏面番号
-            .field-input
-              = f.text_field :name,autocomplete: "off", autocomplete: "off",placeholder:"3~4桁",size:8,required:true,title:"半角数字で入力して下さい。",pattern:'\d{1,4}'
-          .field
-            .field-label
-              = f.label :有効期限（月）
-            .field-input
-              = f.text_field :name,autocomplete: "off",placeholder:"01",size:8,required:true,pattern:'\d{1,2}',title:"半角数字で入力して下さい。"
-          .field
-            .field-label
-              = f.label :有効期限（年）
-            .field-input
-              = f.text_field :name,autocomplete: "off",placeholder:"23",size:8,required:true,pattern:'\d{1,2}',title:"半角数字で入力して下さい。"
-          .actions
-            = f.submit "登録", class: 'btn'
-.footer
-  千葉さん達と共通
+= form_tag(pay_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
+  %label カード番号
+  = text_field_tag "number", "", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
+  %br
+  %label 有効期限
+  %select#exp_month{name: "exp_month", type: "text"}
+    %option{value: ""} --
+    %option{value: "1"}01
+    %option{value: "2"}02
+    %option{value: "3"}03
+    %option{value: "4"}04
+    %option{value: "5"}05
+    %option{value: "6"}06
+    %option{value: "7"}07
+    %option{value: "8"}08
+    %option{value: "9"}09
+    %option{value: "10"}10
+    %option{value: "11"}11
+    %option{value: "12"}12
+  %span 月/
+  %select#exp_year{name: "exp_year", type: "text"}
+    %option{value: ""} --
+    %option{value: "2020"}20
+    %option{value: "2021"}21
+    %option{value: "2022"}22
+    %option{value: "2023"}23
+    %option{value: "2024"}24
+    %option{value: "2025"}25
+    %option{value: "2026"}26
+    %option{value: "2027"}27
+    %option{value: "2028"}28
+    %option{value: "2029"}29
+  %span 年
+  %br
+  %label セキュリティコード
+  = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
+  #card_token
+  = submit_tag "追加する", id: "token_submit"
