--- a/app/views/cards/show.html.haml
+++ b/app/views/cards/show.html.haml
@@ -1,6 +1,4 @@
--# %h1カード編集のviewがくる（登録と同じ）
--# #idがnilなので表示されない
-
+.top
 %label 登録クレジットカード情報
 %br
 = "**** **** **** " + @default_card_information.last4
@@ -8,6 +6,11 @@
 - exp_month = @default_card_information.exp_month.to_s
 - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
 = exp_month + " / " + exp_year
-= form_tag(card_delete_path, method: :post, id: 'charge-form',  name: "inputForm") do
+= form_tag(delete_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
   %input{ type: "hidden", name: "card_id", value: "" }
   %button 削除する
+
+.top__cade
+  %br
+  =link_to users_path do
+    マイページに戻る
