--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -24,5 +24,5 @@
           = link_to  user_session_path, class: 'a' do
             ログイン
         %li.nav__right--second.ul_Nav
-          = link_to new_user_registration_path , class: 'a' do
+          = link_to step1_signup_index_path , class: 'a' do
             新規会員登録
