--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -88,7 +88,7 @@
               %i.fas.fa-flag
               不適切な商品の通報
         .main__box__contents__bottom
-          = form_with url: "#", local: true do |f|
+          = form_with url: "/", local: true do |f|
             .main__box__contents__bottom__text
               = f.text_area :content, class:'text-area'
               %p.p  
@@ -98,7 +98,7 @@
               %button{type: "submit", class: "submit"}
                 %i.fas.fa-comment
                   コメントする
-              %button{type: "button", onClick: "location.href= '#'", class: "buy"}
+              = link_to purchase_index_path, class: "buy" do
                 %i.fas.fa-shopping-cart
                   購入する
         .main__box__contents__links
