--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,3 +1,12 @@
+@keyframes logout_anime {
+  0%{ transform: rotate(0deg);
+      color: pink;}
+  25%{ transform: rotate(10deg);}
+  50%{ transform: rotate(-10deg);}
+  75%{ transform: rotate(10deg);}
+  100%{transform: rotate(-10deg);}
+}
+
 .headers{
   width: 100%;
   height: 100px;
@@ -12,28 +21,29 @@
   &__main{
     width: 100%;
     background-color: mediumturquoise;
-    color: white;
-    padding: 0 100px;
   
     &--box{
-      display: flex;
-      text-align: center;
       margin: 0 auto;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
     }
     &--name{
+      color: white;
       font-size: 20px;
       font-weight: 800;
-      padding-top: 30px;
-      text-align: right;
     }
-    &--page{
-      width: 100%;
-      font-size: 30px;
-      font-weight: 800;
-      padding-top: 20px;
-      text-align: left;
+    &__link{
+      .link-text {
+        color: white;
+      }
+      .link-text:hover {
+        .icon {
+          animation: logout_anime 1.5s;
+        }
+      }
     }
-    }
+  }
   &__sabu {
     width: 100%;
     height:50% ;
@@ -46,19 +56,23 @@
         height: 100%;
         font-size: 30px;
         text-align: center;
-        margin-top: 10px;
-        border: 1px solid mediumturquoise;
+        margin-top: 30px;
         &__title {
+          color: white;
+          border-radius: 10px;
+          background-color: mediumturquoise;
         }
         &__btn {
+          width: 97%;
+          margin: 0 auto;
+          padding: 10px;
+          background-color: whitesmoke;
+          border: 1px solid mediumturquoise;
+          border-radius: 3px;
+          .A:hover {
+            color: slategray;
+          }
         }
-      }
-      &--out{
-        width: 50%;
-        height: 100%;
-        font-size: 20px;
-        text-align: right;
-        padding-top: 20px;
       }
     }
   }
