トップページリンクアイコン

--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -15,14 +15,18 @@
       - if user_signed_in?
         %li.nav__right--first.ul_Nav
           = link_to  destroy_user_session_path, class: 'a', method: :delete do
+            %i.fas.fa-sign-out-alt
             ログアウト
         %li.nav__right--second.ul_Nav
           = link_to "#" , class: 'a' do
+            %i.fas.fa-user-cog
             マイページ      
       - else
         %li.nav__right--first.ul_Nav
           = link_to  user_session_path, class: 'a' do
+            %i.fas.fa-sign-in-alt
             ログイン
         %li.nav__right--second.ul_Nav
           = link_to step1_signup_index_path , class: 'a' do
+            %i.fas.fa-user-plus
             新規会員登録
