--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -49,13 +49,15 @@
             &__image {
               height: 450px;
               .lists-main {
+                
+                margin: 0 10px;
                 width: 100%;
-                height: 100%;
+                height: 60px;
                 .list-main {
                   width: 100%;
                   height: 75%;
                   .image {
-                    object-fit: cover;
+                    object-fit: scale-down;
                   }
                 }
                 .lists-sub {
